# weather

./: CMakeLists.txt  README.md  main.cpp
cmake/: targets.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/include/client/: Client.h
src/client/src/: Client.cpp
src/json_parser/: CMakeLists.txt
src/json_parser/include/json_parser/: JsonParser.h
src/json_parser/src/: JsonParser.cpp
src/local_storage/: CMakeLists.txt
src/local_storage/include/local_storage/: LocalStorage.h
src/local_storage/src/: LocalStorage.cpp
